--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,11 @@
-version: "3.8"
+version: "3.9"
 
 services:
   backend:
     build: .
-    container_name: therapy-backend
     ports:
       - "8000:8000"
-    environment:
-      - MONGODB_URI=mongodb+srv://admin:admin@cluster0.mypct.mongodb.net/therapyai
-      - OPENROUTER_API_KEY=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
     volumes:
       - .:/app
-    restart: unless-stopped
+    env_file:
+      - .env
